--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/Shafat.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shafat Portfolio</title>
+    <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/Home.jsx"></script>
+        <div id="cv"></div>
+    <script type="module" src="/src/CV.jsx"></script>
   </body>
 </html>
