--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Shafat.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shafat  - Web Desiner</title>
+    <title>Shafat  - Web Designer</title>
     <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
   </head>
