--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Shafat.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/Shafat.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shafat  - Web Designer</title>
+    <meta name="description" content="I am a dynamic and creative professional, straddling the exciting fields of web and graphics design while constantly expanding my knowledge and skills as a learner. Currently, I am also deeply immersed in my studies at the University of Metropolitan University’s Software Engineering Department, where I am honing my technical acumen and preparing for a future at the forefront of technological innovation." />
+    <meta name="keywords" content="Web Designer, Graphics Designer, Web Developer" />
+    <meta name="twitter:card" content="./public/Shafat.svg">
+    <meta property="og:image" content="./public/Shafat.svg" />
     <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
   </head>
